@@ -25,7 +25,7 @@ public class RomanNumerals {
 	}
 	
 	private Map<String, Integer> numerals = new HashMap<String, Integer>();
-	numerals.put("I", new Integer(1));
+	numerals.put("I", Integer.valueOf(1));
 	
 	public int convertToInteger(String romanNum) {
 		String patternString = String.join("|",
